<resources>
    <string name="app_name">News Radio</string>
    <string name="google_api_key">AIzaSyClKRZ0STUgLf3E90l4Ieoz_5cGzSmGkjk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="read_news">READ NEWS</string>
    <string name="shared_news">SHARED NEWS</string>
    <string name="settings">SETTINGS</string>
    <string name="app_information">ABOUT APP</string>
    <string name="tip">Share news to your friends quickly</string>
    <string name="app_version">Version </string>
    <string name="invalid_information">You have provided some information that is invalid</string>
    <string name="please_wait">We are processing your request. This will take couple time</string>
    <string name="registration_label">Registration</string>
    <string name="invalid_email_address">Sorry. We could not find your email address. Please check again.</string>
    <string name="registration_tip">Tip : Please provide exact information , so we can provide best service for you.</string>
    <string name="successful_registration">Well come to news radio.</string>
    <string name="processing">Processing</string>
    <string name="navigation_my_profile">My Profile</string>
    <string name="navigation_my_shares">My Shares</string>
    <string name="navigation_my_friends">My Friends</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="new_content">New content</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="connection_failed">Unfortunately , You device was not connected to the Internet . Please check again !</string>
    <string name="waiting_for_update">Your update will take few times because this will change your profile from our Service. Please wait</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="last_news">Last News</string>
    <string name="jobs">Jobs</string>
    <string name="politics">Politics</string>
    <string name="health">Health</string>
    <string name="sport">Sport</string>
    <string name="money">Money</string>
    <string name="technologies">Technologies</string>
    <string name="irresistible_news">Irresistible news</string>
    <string name="invalid_phone_contact">This phone contact has been already registered.</string>
    <string name="invalid_phone_contact_title">Invalid phone contact</string>
    <string name="title_activity_news_article">NewsArticleActivity</string>
    <string name="learn_more">Learn more…</string>
    <string name="write_some_thing">Write something…</string>
    <string name="sharing">Sharing…</string>
    <string name="successful_share">Shared this news in NewsRadio forums</string>
    <string name="more">…</string>
    <string name="error">Error</string>
    <string name="error_message">Error occurred! Please check again. Make sure that you inputted valid information and you must connect to the Internet</string>
    <string name="share_content">SHARE CONTENT</string>
    <string name="share_title">SHARE TITLE</string>
    <string name="share">SHARE</string>
    <string name="no_share_title">You have to input title for this Share.</string>
    <string name="categories">Categories</string>
    <string name="app_id">1517380571888085</string>
</resources>
