<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/textViewShareTitleHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/share_title"
        android:textColor="#1A237E"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextUserShareTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_some_thing" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="#9E9E9E" />

    <TextView
        android:id="@+id/textViewShareContentHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/share_content"
        android:textColor="#E91E63"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewShareArticleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:text="Article Title"
        android:textColor="#1B5E20"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/imageViewShareArticleImage"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/last_news_icon" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="#9E9E9E" />

    <Button
        android:id="@+id/buttonShare"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="#3F51B5"
        android:text="@string/share"
        android:textColor="#E8EAF6" />
</LinearLayout>